# tauri-leptos-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
scss/: style.scss
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
